# plug-and-bench

./: .gitignore  README.md
Benchmark Engineering Tool/: README.md
Benchmark Engineering Tool/example/: README.md  setupemf4cpp.sh
Benchmark Engineering Tool/example/BenchmarkLib/: .project
Benchmark Engineering Tool/example/BenchmarkLib/src-gen/: CMakeLists.txt  basicAttributes.cmake  benchmark_experiment.pri  communicationObject.cmake  communicationPattern.hpp  communicationPattern.pri  communicationPattern_forward.hpp  componentDefinition.hpp  componentDefinition_forward.hpp  componentMode.cmake  componentMode.hpp  coordinationPattern.cmake  coordinationPattern.cpp  coordinationPattern_forward.hpp  generate_code.sh  parameterDefinition.cmake  parameterDefinition.cpp  parameterDefinition.hpp  parameterDefinition.pri  serviceDefinition.pri  standardized_problem.cmake  standardized_problem.hpp  standardized_problem.pri  standardized_problem_forward.hpp  stateMachine.cmake  stateMachine.hpp  stateMachine.pri
Benchmark Engineering Tool/example/BenchmarkLibUnbuilt/: .project
Benchmark Engineering Tool/example/BenchmarkLibUnbuilt/src-gen/: basicAttributes.cpp  basicAttributes.hpp  basicAttributes.pri  basicAttributes_forward.hpp  benchmark_experiment.cmake  benchmark_experiment.cpp  benchmark_experiment.hpp  benchmark_experiment_forward.hpp  communicationObject.cpp  communicationObject.hpp  communicationObject.pri  communicationPattern.cmake  (+18 more)
Benchmark Engineering Tool/example/CommHoleLocalizer/: .cproject  .project
Benchmark Engineering Tool/example/CommHoleLocalizerBenchmark/: .cproject  .project
Benchmark Engineering Tool/example/ComponentBenchmarkHoleLocalizer/: .classpath  .cproject  .project  representations.aird  screw_hole_localizer.standardized_problem
Benchmark Engineering Tool/example/ComponentBenchmarkHoleLocalizer/smartsoft/: CMakeLists.txt
Benchmark Engineering Tool/example/ComponentBenchmarkHoleLocalizer/smartsoft/.launch/: ComponentBenchmarkHoleLocalizerCMake.launch  ComponentBenchmarkHoleLocalizerDeployAndRun.launch  ComponentBenchmarkHoleLocalizerMakeAll.launch  ComponentBenchmarkHoleLocalizerv2CMake.launch  ComponentBenchmarkHoleLocalizerv2MakeAll.launch  ComponentBenchmarkHoleLocalizerv2MakeDistclean.launch
Benchmark Engineering Tool/example/ComponentBenchmarkHoleLocalizer/smartsoft/src/: Activity3.cc  Activity3.hh  CompHandler.cc  ComponentBenchmarkHoleLocalizerCore.cc  ComponentBenchmarkHoleLocalizerCore.hh  ParameterStateStruct.cc  SmartStateChangeHandler.cc  screw_hole_localizer.standardized_problem  screw_hole_localizer_old.standardized_problem  sp.standardized_problem  startstop-hooks.sh
Benchmark Engineering Tool/example/ComponentBenchmarkHoleLocalizer/smartsoft/src-gen/: Activity3Core.cc  Activity3Core.hh  Activity3ObserverInterface.hh  ComponentBenchmarkHoleLocalizer.cc  ComponentBenchmarkHoleLocalizer.hh  ComponentBenchmarkHoleLocalizer.ini.head  ComponentBenchmarkHoleLocalizer.ini.template  ComponentBenchmarkHoleLocalizerDependencies.cmake.in  ComponentBenchmarkHoleLocalizerImpl.cc  ComponentBenchmarkHoleLocalizerImpl.hh  ComponentProject.cmake  main.cc
Benchmark Engineering Tool/example/ComponentBenchmarkHoleLocalizer/smartsoft/src-gen/docu/: README.md
Benchmark Engineering Tool/example/ComponentBenchmarkHoleLocalizer/smartsoft/src-gen/params/: ParameterUpdateHandler.cc
Benchmark Engineering Tool/example/ComponentDatabase/: .classpath  .cproject  .project  representations.aird
Benchmark Engineering Tool/example/ComponentHoleLocalizer/: .classpath  .cproject  .project  install_dependencies.sh  representations.aird
Benchmark Engineering Tool/example/ScrewHoleLocalizerBenchmarkExperimentModel/: .project  benchmark_exp.benchmark_experiment
Benchmark Engineering Tool/example/SystemHoleLocalizer/: .classpath  .project  representations.aird
(+530 files in other folders)
